<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_analysis_broker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.firstidea.android.brokerx.AnalysisBrokerActivity"
    tools:showIn="@layout/activity_analysis_broker">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top11HighesBrokerLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/top_11_highest_paying_brokerage"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top11sellerLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/top_11_highest_paying_sellers"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top11BuyerLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/top_11_highest_paying_buyer"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/desparity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="Brokerage Desparity Graph"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_filters_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="More Filters"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_black_24dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="1"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left10"
                    android:layout_marginTop="5dp"
                    android:text="Search Enquiry"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:text="Start Date"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"
                            android:layout_marginRight="@dimen/left10"
                            android:layout_weight="1"
                            android:text="End Date"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:weightSum="2.5"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/starDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/left10"
                            android:layout_weight="1.1"
                            android:background="@drawable/date_box"
                            android:onClick="setStartDate"
                            android:padding="5dp"
                            android:textColor="@color/dividerColor"
                            android:drawableLeft="@drawable/calendar1"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="From Date"
                            android:textSize="14sp"
                            android:clickable="true"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="2dp"
                            android:layout_weight="0.3"
                            android:layout_gravity="center_vertical"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:id="@+id/endDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/left10"
                            android:layout_weight="1.1"
                            android:background="@drawable/date_box"
                            android:onClick="setEndDate"
                            android:padding="5dp"
                            android:textColor="@color/dividerColor"
                            android:drawableLeft="@drawable/calendar1"
                            android:drawablePadding="10dp"
                            android:gravity="center_vertical"
                            android:text="To Date"
                            android:textSize="14sp"
                            android:clickable="true"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">
                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="@dimen/left10"
                            android:textSize="16sp"
                            android:layout_marginLeft="@dimen/left10"
                            style="@style/spinner_style"
                            android:drawSelectorOnTop="true"
                            />
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:text="Search"
                    android:layout_width="125dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="right"
                    android:background="@drawable/app_btn"
                    android:id="@+id/button_search"
                    android:layout_weight="0.52" />
<!--

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/anlysis_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="5dp"
                    android:background="@color/activity_background_color"

                    />
-->


            </LinearLayout>




        </LinearLayout>


    </ScrollView>


</RelativeLayout>
